fix(KAN-131): Correct gaps

--- a/src/sections/about/about.module.css
+++ b/src/sections/about/about.module.css
@@ -104,3 +104,9 @@
     gap: var(--2xl);
   }
 }
+
+@media (min-width: 1921px) {
+  .about {
+    --section-gap-desktop: var(--3xl);
+  }
+}
