--- a/src/sections/services/services.module.css
+++ b/src/sections/services/services.module.css
@@ -190,3 +190,11 @@
     --grid-gap: var(--2xl);
   }
 }
+
+@media (min-width: 1921px) {
+  .badgeGroup,
+  .badgeGroupAlt,
+  .servicesGroup {
+    --stack-gap: var(--2xl);
+  }
+}
