--- a/src/sections/testimonials/testimonial-card.module.css
+++ b/src/sections/testimonials/testimonial-card.module.css
@@ -73,6 +73,7 @@
 @media (min-width: 1921px) {
   .testimonialCard {
     height: 450px;
+    gap: var(--l);
   }
 
   .header {
